# esp32-udp-monitor

./: Cargo.toml  README.md  esp32.py
src/: main.rs
